# learn-rust-gemm

./: Cargo.toml  README.md
src/: lib.rs  vector.rs
src/benches/: bench_main.rs  ndarray_dot.rs  plain.rs
src/benches/logs/: vec_dot_million.txt  vec_dot_thousand.txt
