[package]
name = "learn-rust-gemm"
version = "0.0.0"
authors = ["Ehsan M.Kermani <ehsanmo1367@gmail.com>"]

[dependencies]
rand = "0.4.2"
blas = "0.19"
openblas-src = "0.5"
cblas = "0.1.5"
ndarray = { version = "0.11.2", features = ["blas"] }
ndarray-rand = "0.7.0"
rayon = "1.0"

[dev-dependencies]
criterion = "0.2"
walkdir = "2.1"

[[bench]]
name = "bench_main"
harness = false
path = "src/benches/bench_main.rs"

[lib]
bench = false
